country criteria introduced